🤖 Auto-update Performance Test Results
- Updated by GitHub Actions
- Generated from config.yaml
- Triggered by: workflow_dispatch
- Workflow run: 18496414158
- Timestamp: 2025-10-14 12:26:57 UTC

Changes:
 netty-socketio-smoke-test/PERFORMANCE_REPORT.md    |  1 +
 ...performance-result-17_0_16-20251014-122557.json | 35 ++++++++++++++++++++++
 2 files changed, 36 insertions(+)